Makes armored-biter-override work with enemy race manager mod. Also adds space travel feature flag

--- a/biological-machines-planet-balack/changelog.txt
+++ b/biological-machines-planet-balack/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 2. 2. 2026
+  Compatibility:
+    - Fixed crash on load with enemy race manager installed
+  Changes:
+    - Added space travel required feature flag
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 28. 1. 2026
   Compatibility:
