--- a/biological-machines-core/changelog.txt
+++ b/biological-machines-core/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 3. 2. 2026
+  Changes:
+    - Added startup setting to change berry yield from berry bush
+    - Added berry map gen terrain setting (scale/coverage)
+  Compatibility:
+    - Fixed crash with reinforced wall standalone and Water-Friendly Walls
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 28. 1. 2026
   Modding:
