--- a/biological-machines-cloning/changelog.txt
+++ b/biological-machines-cloning/changelog.txt
@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 3. 2. 2026
+  Changes:
+    - Added space travel required feature flag
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 28. 1. 2026
   Changes:
     - Replaces thumbnail, replacing text plates with text
-
