--- a/biological-machines-warp-drive/changelog.txt
+++ b/biological-machines-warp-drive/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 3. 2. 2026
+  Changes:
+    - Added space travel required feature flag
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 28. 1. 2026
   Compatibility:
