--- a/biological-machines-hunger/changelog.txt
+++ b/biological-machines-hunger/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.4
+Date: 5. 2. 2026
+  Compatibility:
+    - Moved food decapsulization to data-updates for compatibility with k2so
+---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 3. 2. 2026
   Changes:
